add and change the application-dev file